--- a/Index.html
+++ b/Index.html
@@ -22,7 +22,7 @@
     <main>
       <!-- Aquí iría el contenido de tu página web -->
       <div id="logo">
-        <img src="C:\Users\DALIO\Desktop\Surprise Boxy web\Imagen\Una caja, una Sonrisa-PhotoRoom.png-PhotoRoom.png" alt="SurpriseBoxy">
+        <img src="Una caja, una Sonrisa-PhotoRoom.png-PhotoRoom.png" alt="SurpriseBoxy">
       </div>
 
       <div style="text-align:center; color:rgb(192, 38, 146); font-size:18px; margin-top:10px; margin-left: 250px; margin-right: 250px;">
